<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleFragment">

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/home"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>


    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="Schedule Scope"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/imageButtonHome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Sort By: "
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonHome" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="186dp"
        android:layout_height="27dp"
        android:layout_marginTop="53dp"
        android:entries="@array/spinner_items"
        app:layout_constraintEnd_toStartOf="@+id/textViewLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"/>
<!--        tools:listitem="@layout/fragment_schedule_spinner"/>-->

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tableRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/activity_schedule_item"></androidx.recyclerview.widget.RecyclerView>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

